--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,13 @@
-﻿		<table>
+﻿	<div>
+		<form method="get" action="/quizes">
+			<input type="text" name="search" value="" />
+			<input type="submit" value="Buscar">
+		</form>
+	</div>
+	<div>
+		<table>
 		<% for(var i=0; i < quizes.length; i++){ %>
 			<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 		<% } %>
 		</table>
+	</div>
