--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,6 @@
-﻿<p<<label for="preg" class="rem">Pregunta:</label>
+﻿<p><label for="preg" class="rem">Pregunta:</label>
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/></p>
 <p><label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/></p>
-<a href="/quizes"><button>Cancelar</button></a>
+<button type="button" onClick="javascript: location.replace('/quizes');">Cancelar</button>
 <input type="submit" value="Salvar">
