Añadir a cada pregunta un índice temático

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,8 +6,10 @@
 	</div>
 	<div>
 		<table>
+		<tr><th>Tema</th><th>Pregunta</th><th colspan="2"></th></tr>
 		<% for(var i=0; i < quizes.length; i++){ %>
 			<tr>
+				<td><%= quizes[i].tema %></td>
 				<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
 				<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
         <td>
