--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,7 +1,7 @@
 ﻿	<div>
 		<form method="get" action="/quizes">
 			<input type="text" name="search" value="" />
-			<input type="submit" value="Buscar">
+			<button type="submit">Buscar</button>
 		</form>
 	</div>
 	<div>
