--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,4 +1,5 @@
 ﻿body { background: #333; font-size: xx-large; }  
 #page-wrap:after { content: "Smartphone Layout"; }  
 h2 span, section h3 { display: none; }  
-footer, input { font-size: large; } 
+footer, input { font-size: large; }
+button {font-size: large; padding: 10px;}
