--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<meta charset="utf-8">
     <title> Preguntas </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-		<link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)' href='/stylesheets/wide.css' />
-		<link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' href='/stylesheets/smartphone.css' />
+		<link rel='stylesheet' type='text/css' media='only screen and (min-width: 640px) and (min-device-width: 541px)' href='/stylesheets/wide.css' />
+		<link rel='stylesheet' type='text/css' media='only screen and (max-width: 540px)' href='/stylesheets/smartphone.css' />
     
   </head>
   <body>
