--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,5 +1,6 @@
-﻿body { background: #333; font-size: xx-large; }  
-#page-wrap:after { content: "Smartphone Layout"; }  
+﻿body { background: #333; font-size: large; margin: 0px; }  
+#page-wrap { margin: 0px; padding: 0px;}  
+#page-wrap:after { content: "Smartphone Layout"; margin: 0px; padding: 0px;}  
 h2 span, section h3 { display: none; }  
 footer, input { font-size: large; }
 button {font-size: large; padding: 10px;}
