--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,4 @@ footer { background: #eee; text-align: center;}
 nav span { margin: 0px 10px 0px 0px;}
 #ErrorMsgs {color: #f61; font-size: smaller}
 button {padding: 4px;}
+td div {float: left; margin: 2px;}
