--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -12,4 +12,4 @@
 <p><label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/></p>
 <button type="button" onClick="javascript: location.replace('/quizes');">Cancelar</button>
-<input type="submit" value="Salvar">
+<button type="submit">Salvar</button>
