--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,4 @@ nav span { margin: 0px 10px 0px 0px;}
 #ErrorMsgs {color: #f61; font-size: smaller}
 button {padding: 4px;}
 td div {float: left; margin: 2px;}
+.right {float: right;}
