--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -11,6 +11,7 @@
 			<tr>
 				<td><%= quizes[i].tema %></td>
 				<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+			<%if(session.user){%>
 				<td><div><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></div><div>
           <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
             <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
@@ -18,8 +19,11 @@
             </button>
           </form></div>
         </td>
+			<% } %>
 			</tr>
 		<% } %>
 		</table>
+		<%if(session.user){%>
 		<p><a href="/quizes/new"><button type="button">Crear pregunta</button></a></p>
+		<% } %>
 	</div>
