--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -3,23 +3,23 @@
 		<table class="statistics">
 			<tr>
 				<td align="left">Número de preguntas</td>
-				<td align="right"><%= statistics[0].N_Preguntas %></td>
+				<td align="right"><%= statistics[0]["N_Preguntas"] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de comentarios totales</td>
-				<td align="right"><%= statistics[0].N_Comentarios %></td>
+				<td align="right"><%= statistics[0]["N_Comentarios"] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número medio de comentarios por pregunta</td>
-				<td align="right"><%= statistics[0].Media %></td>
+				<td align="right"><%= statistics[0]["Media"] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de preguntas sin comentarios</td>
-				<td align="right"><%= statistics[0].Preg_Sin %></td>
+				<td align="right"><%= statistics[0]["Preg_Sin"] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de preguntas con comentarios</td>
-				<td align="right"><%= statistics[0].Preg_Con %></td>
+				<td align="right"><%= statistics[0]["Preg_Con"] %></td>
 			</tr>
 		</table>
 	</div>
