--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -3,7 +3,7 @@
 		<table class="statistics">
 			<tr>
 				<td align="left">Número de preguntas</td>
-				<td align="right"><%= statistics[0]["N_Preguntas"] %></td>
+				<td align="right"><%= statistics["0"]["N_Preguntas"] %> - <%= statistics["N_Preguntas"] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de comentarios totales</td>
