--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -3,7 +3,7 @@
 		<table class="statistics">
 			<tr>
 				<td align="left">Número de preguntas</td>
-				<td align="right"><%= statistics[0].n_preguntas %></td>
+				<td align="right"><%= statistics[0]['n_preguntas'] %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de comentarios totales</td>
