--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -1,5 +1,5 @@
 ﻿<%
-if(statistics[0].n_comentarios === undefined) statistics[0]=statistics[0][0];
+if(statistics[0].n_preguntas === undefined) statistics[0]=statistics[0][0];
 %>
   <h5>Estadísticas</h5>
 	<div>
@@ -7,7 +7,8 @@ if(statistics[0].n_comentarios === undefined) statistics[0]=statistics[0][0];
 			<tr>
 				<td align="left">Número de preguntas</td>
 				<td align="right">
-				<%for( i in statistics){%>
+				<%/*
+				for( i in statistics){%>
 				  <%= "I:"+i %><br>
 					<%for( j in statistics[i]){%>
 						<%= j+":"+statistics[i][j]%><br>
@@ -15,9 +16,11 @@ if(statistics[0].n_comentarios === undefined) statistics[0]=statistics[0][0];
 						 <%= k+":"+statistics[i][j][k]%><br>
 						<%}%>
 				  <%}%>
-				<%}%>
+				<%}
+				*/
+				%>
 				
-				<br><%= statistics[0].n_comentarios %></td>
+				<br><%= statistics[0].n_preguntas %></td>
 			</tr>
 			<tr>
 				<td align="left">Número de comentarios totales</td>
